--- a/src/css/my_css.css
+++ b/src/css/my_css.css
@@ -160,7 +160,7 @@ a:hover {
 }
 
 a:not([href]):not([tabindex]) {
-  color: inherit;
+  color: black;
   text-decoration: none;
 }
 
@@ -2598,8 +2598,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #f4623a;
-  border-color: #f4623a;
+  background-color: #6f42c1;
+  border-color: #6f42c1;
 }
 
 .btn-primary:hover {
@@ -10555,7 +10555,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #f4623a;
+  border-color: #6f42c1;
 }
 
 hr.light {
@@ -10572,7 +10572,7 @@ hr.light {
   font-weight: 700;
   text-transform: uppercase;
   border: none;
-  border-radius: 10rem;
+  border-radius: 0rem;
 }
 
 .page-section {
