Logueo que muestra los amigos y desconectarse

--- a/src/css/my_css.css
+++ b/src/css/my_css.css
@@ -7535,7 +7535,7 @@ button.bg-dark:focus {
 
 .align-self-end {
   -ms-flex-item-align: end !important;
-  align-self: flex-end !important;
+  align-self: center !important;
 }
 
 .align-self-center {
