--- a/src/css/my_css.css
+++ b/src/css/my_css.css
@@ -5286,7 +5286,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #f4623a;
+  background-color: #6f42c1;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -5698,8 +5698,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item:first-child {
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 .list-group-item:last-child {
@@ -7382,6 +7382,7 @@ button.bg-dark:focus {
   -webkit-box-direction: reverse !important;
   -ms-flex-direction: row-reverse !important;
   flex-direction: row-reverse !important;
+  max-width: 550px;
 }
 
 .flex-column-reverse {
